--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "Mandana Eibegger <scripts@schoener.at>"
   ],
-  "description": "A utility script to track font-resize and convert measurement units",
+  "description": "This project experienced a major update and has been moved to me-use-rem. Please install using me-use-rem instead.",
   "main": "src/me-font-size.js",
   "moduleType": [
     "amd"
